# HCP_CMS

./: .gitignore  CLAUDE.md  HCP客服自動化系統_開發功能規格書.md  HCP客服自動化系統_需求文件.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: ruff_check.py
.claude/rules/: core-layer.md  data-layer.md  git-safety.md  poc-risk-assessment.md  services-layer.md  spec-writing.md  temp-files.md  tests.md  ui-layer.md
.claude/skills/: README.md
.claude/skills/building/: SKILL.md
.claude/skills/committing/: SKILL.md
.claude/skills/poc/: SKILL.md
.github/workflows/: release.yml
docs/: blueprint.md  getting-started-checklist.md  operation-manual.md  客服 Web Portal 使用說明.md  系統交接文件.md
resources/: jieba_userdict.txt  synonyms_default.json
scripts/: build.py  install_web_service.bat  installer.iss  setup-dev.ps1  setup-dev.sh  uninstall_web_service.bat
src/hcp_cms/: __init__.py  __main__.py  app.py
templates/: patch_notify.html.j2
tests/: conftest.py
tests/integration/: test_core_layer.py  test_csv_wizard_custom_columns.py  test_data_layer.py  test_msg_qa_extraction.py  test_web_portal_flow.py
tests/unit/: test_anonymizer.py  test_app.py  test_audit_logger.py  test_backup.py  test_case_detail_manager.py  test_case_detail_manager_extra.py  test_case_detail_manager_sync.py  test_case_formatter.py  test_case_log_bugnote_id.py  test_case_log_repository.py  test_case_manager.py  test_case_manager_delete.py  test_case_mantis_issue_date.py  test_case_merger.py  test_case_model_closed.py  test_case_report_columns.py  test_case_repository_delete.py  test_case_repository_extra_fields.py  test_case_repository_kms_sync.py  test_case_view.py  test_case_visibility_filter.py  test_classifier.py  test_classifier_mantis.py  test_classifier_staff.py  test_claude_content.py  test_claude_content_supplement.py  test_cs_report_engine.py  test_cs_report_sync_job.py  test_csv_import_engine.py  test_csv_import_engine_custom.py  test_custom_column_manager.py  test_custom_column_repository.py  test_customer_manager.py  test_database.py  test_email_cleaner.py  test_excel_exporter.py  test_fts.py  test_google_sheets_service.py  test_help_dialog.py  test_i18n.py  (+48 more)
(+209 files in other folders)
