[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hcp-cms"
version = "2.0.0"
description = "HCP Customer Service Management System"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "openpyxl>=3.1",
    "extract-msg>=0.48",
    "exchangelib>=5.1",
    "requests>=2.31",
    "keyring>=25.0",
    "jieba>=0.42",
    "PySide6_Addons>=6.6",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.3",
    "mypy>=1.8",
    "pyinstaller>=6.3",
    "pre-commit>=3.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
